# maverx-style-buddy

./: .env.example  .gitignore  README.md  check_credits.py  inspect_pptx.py  main.py  preview_templates.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: Home.py
app/lib/: api.py  branding.py
app/pages/: 2_Templates.py  3_Settings.py
plannings/: lovable.md
slides/: slide_dictionary.md
slides/template_yaml/: 01-deck-title.yaml  02-process-slide.yaml  03-unstructured-three-section-slide.yaml  04-agenda.yaml  05-text-slide.yaml  06-dark-text-slide.yaml  07-complex-layout-slide-1.yaml  08-complex-layout-slide-2.yaml  09-complex-layout-slide-3.yaml  10-longer-text-slide.yaml  11-tabular-slide.yaml  12-itemized-text-boxes.yaml  13-four-section-slide.yaml  14-dark-section-title-slide.yaml  15-extra-process-timetable-slide.yaml  16-three-section-slide.yaml  17-theory-topic-slides.yaml  18-section-title.yaml  19-timeline-process-slide.yaml  20-hand-out-slide.yaml  21-big-question.yaml  22-break-time.yaml  23-debrief.yaml  index.yaml
src/: constants.py  logger.py  main.py  templates_catalog.py
src/agent/: client.py  lesson_plan.py  loop.py  pipeline.py
src/api/: router.py
src/interface/: cli.py
src/skills/: _store.py  add_slide.py  apply_style_guide.py  create_presentation.py  export_pptx.py  list_images.py  list_layouts.py  registry.py  render_slides.py  update_slide.py
src/style_guides/: PRESENTATION_CREATION_GUIDE.md  analyzer.py  loader.py  schema.py
style_guides/: default.yaml  maverx.yaml  summary.txt
style_guides/maverx/: 3_aangepaste_indeling_1.yaml  3_aangepaste_indeling_2.yaml  3_aangepaste_indeling_3.yaml  README.md  aangepaste_indeling.yaml  blank_1.yaml  blank_2.yaml  blank_3.yaml  blank_4.yaml  default.yaml  foto_slide_grijs_1.yaml  (+31 more)
(+65 files in other folders)
