[project]
name = "maverx-style-buddy"
version = "0.1.0"
description = "Local tooling and agentic skill for building Maverx house-style training bundles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
    "lxml>=5.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "python-pptx>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
